# sst-template

./: CMakeLists.txt  LICENSE
include/sst-template/: my_lib.h
src/: my_lib.cpp
src/pybind/: my_lib_module.cpp
